<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginWithEmailVM" type="com.guruprasadsapplication.app.modules.loginwithemail.data.viewmodel.LoginWithEmailVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLoginwithEmai"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_10"
            android:id="@+id/btnBackbtn"
            android:layout_height="@dimen/_40pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_40pxh"
            android:paddingHorizontal="@dimen/_10pxh"
            android:paddingVertical="@dimen/_10pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_backbtn" tools:ignore="ContentDescription"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:text="@{loginWithEmailVM.loginWithEmailModel.txtLanguage}"
            style="@style/txtWorkSansromanmedium20" tools:text="@string/msg_login_with_your"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageVector"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector_blue_a400_17x20"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector_blue_a400_17x20"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="0.72" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginWithEmailVM.loginWithEmailModel.txtEmail}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_email"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai"
            android:id="@+id/etEmailValue"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={loginWithEmailVM.loginWithEmailModel.etEmailValueValue}"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageVectorOne"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_18pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector_blue_a400"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector_blue_a400"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.82" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginWithEmailVM.loginWithEmailModel.txtPassword}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_password"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
            android:drawableEnd="@drawable/img_vector_black_900"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_pass"
            android:id="@+id/etPasswordValue"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_18pxh"
            android:paddingStart="@dimen/_22pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@={loginWithEmailVM.loginWithEmailModel.etPasswordValueValue}"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgetPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginWithEmailVM.loginWithEmailModel.txtForgetPassword}"
            style="@style/txtWorkSansromansemibold18"
            textUnderline="true" tools:text="@string/msg_forget_password3"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDonthaveacco"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_56pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginWithEmailVM.loginWithEmailModel.txtDonthaveacco}"
            style="@style/txtWorkSansromanmedium18_1" tools:text="@string/msg_don_t_have_acco"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginWithEmailVM.loginWithEmailModel.txtSignup}"
            style="@style/txtWorkSansromansemibold18"
            textUnderline="true" tools:text="@string/lbl_signup"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_140pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_3" tools:text="@string/lbl_login"/>
    </LinearLayout>
</layout>
