<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="editProfileVM" type="com.guruprasadsapplication.app.modules.editprofile.data.viewmodel.EditProfileVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearEditProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleblue_A400">
                <FrameLayout android:id="@+id/frameBackbtn"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_40pxh" style="@style/groupStyleblue_1">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_10pxh"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEditProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_119pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.75"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editProfileVM.editProfileModel.txtEditProfile}"
                    style="@style/txtWorkSansromanmedium22_1" tools:text="@string/lbl_edit_profile"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageGroupSeventyOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_100pxh"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="@dimen/_100pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group71"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group71"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnfirstname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtFirstName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtFirstName}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_first_name"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_firs"
                android:id="@+id/etEmailValue" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={editProfileVM.editProfileModel.etEmailValueValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlastname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLastName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtLastName}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_last_name"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_last"
                android:id="@+id/etEmailValueOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={editProfileVM.editProfileModel.etEmailValueOneValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnmobilenumber"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtMobileNumber"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtMobileNumber}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_mobile_number"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
                android:ellipsize="end"
                android:hint="@string/msg_91_10digit_p"
                android:id="@+id/etPrice" android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={editProfileVM.editProfileModel.etPriceValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtEmail}"
                style="@style/txtWorkSansromanmedium18" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_blue_a400_radius_4"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_emai"
                android:id="@+id/etEmailValueTwo"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={editProfileVM.editProfileModel.etEmailValueTwoValue}"
                android:textColorHint="@color/black_900_7f"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowgoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_38pxh"
                android:layout_width="@dimen/_38pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLinkyourGoogl"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.62" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtLinkyourGoogl}"
                style="@style/txtWorkSansromanmedium14_1" tools:text="@string/msg_link_your_googl"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLink"
                android:layout_height="@dimen/_30pxv"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="@dimen/_70pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_21pxh"
                android:paddingStart="@dimen/_22pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_link"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_link"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSave"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_50pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_save" android:textAllCaps="false"
            style="@style/btnSolidRounded_2" tools:text="@string/lbl_save"/>
    </LinearLayout>
</layout>
